[package]
name = "meno"
version = "0.1.0"
edition = "2021"
description = "A fundamental physics simulator"

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0"
tracing = "0"
tracing-subscriber = "0"
wgpu = "0"
winit = "0"
tokio = { version = "1", features = ["full"] }
bytemuck = { version = "1", features = ["derive"] }
nalgebra = "0"
