[package]
name = "meno"
version = "0.1.0"
edition = "2021"
description = "A fundamental physics simulator"

[dependencies]
clap = { version = "*", features = ["derive"] }
rand = "*"
tracing = "*"
tracing-subscriber = "*"
wgpu = "*"
winit = { version = "0.29", features = ["rwh_05"] }
tokio = { version = "*", features = ["full"] }
bytemuck = { version = "*", features = ["derive"] }
nalgebra = "*"
nalgebra-glm = "*"
itertools = "*"
