[package]
name = "meno"
version = "0.1.0"
edition = "2021"
description = "TODO"

[dependencies]
bytemuck = { version = "1.16", features = [ "derive" ] }
tokio = { version = "*", features = ["full"] }
tracing = "*"
tracing-subscriber = "*"
wgpu = "*"
winit = { version = "0.29", features = ["rwh_05"] }
